src/objects/Participation__c.object
<CustomObject>
    <fields>
        <fullName>Cource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cource</label>
        <referenceTo>Cource__c</referenceTo>
        <relationshipLabel>Participations</relationshipLabel>
        <relationshipName>Participations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hours_attended__c</fullName>
        <label>Hours_attended</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Participations</relationshipLabel>
        <relationshipName>Participations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Participation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Participation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Participations</pluralLabel>
    <recordTypes>
        <fullName>Attendance</fullName>
        <active>true</active>
        <label>Attendance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Result</fullName>
        <active>true</active>
        <label>Result</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>